modified mega navigation icon of us region

--- a/layouts/partials/meganav_kt.html
+++ b/layouts/partials/meganav_kt.html
@@ -31,7 +31,7 @@
     <ul class="g-nav" role="none" ></ul>
     <div id="mega-nav" class="mega-nav">
         <div class="mega-tab-wrap">
-            <div id="mega-tab-short" class="mega-tab-short"><span class="mega-tab-short-wrap"><button id="mega-tab-switch" class="mega-tab-switch" aria-label="{{ i18n "Tab_menu" }}" aria-controls="mega-tab-bar" aria-expanded="false"><i id="mega-tab-switch-icon" class="fas fa-bars mega-tab-switch-icon" aria-hidden="true"></i></button><span id="mega-tab-short-text" >{{$curtab}}</span></div>
+            <div id="mega-tab-short" class="mega-tab-short"><span class="mega-tab-short-wrap"><span id="mega-tab-short-text" >{{$curtab}}</span><button id="mega-tab-switch" class="mega-tab-switch" aria-label="{{ i18n "Tab_menu" }}" aria-controls="mega-tab-bar" aria-expanded="false"><i id="mega-tab-switch-icon" class="fas fa-chevron-down mega-tab-switch-icon" aria-hidden="true"></i></button></div>
             <div id="mega-tab-bar" class="mega-tab-bar">
             <ul role="tablist">
     {{- $menuid := 1}}
