--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,10 +8,7 @@
     {{ partial "meganav" . }}
 {{- end -}}
 {{- if eq $.Site.Params.template_version "2" }}
-  {{- $welcome := (i18n "Welcome" .)  }}
-  {{- if eq $.Site.Params.TargetRegion "US" }}
-    {{- $welcome = printf "%s%s%s" $welcome "! " (i18n "Enter_keywords")}}
-  {{- end }}
+  {{- $welcome := printf "%s%s%s"  (i18n "Welcome" .) "! " (i18n "Enter_keywords")}}
 <div class="top-page-header">
   <div class="search-wrap">
     <div class="welcome_message">{{$welcome}}</div>
@@ -84,6 +81,8 @@
           </div>
           {{- $category_opened = false }}
         {{- end }}
+    {{- else }}
+      <!-- {{ errorf "Unable to get resource %q" $path }} -->
     {{- end }}
 
           <div class="appendix-info">
@@ -126,7 +125,7 @@
 
         </article>
     </main>
-
+  </div>
 {{- else }} <!-- version"1" -->
   {{- if ne $.Site.Params.preview_site true }}
     <div class="eye-catching">
