--- a/static/stylesheets/custom_general.css
+++ b/static/stylesheets/custom_general.css
@@ -3,6 +3,9 @@
   --focus-color: #2563eb;
   --select-color: #2563eb;
   --select-bg-color: #ccdcff;
+
+  --appendix-bg-color: #d6f8ff;
+  --appendix-icon-bg-color: #4bd7f3;
 }
 
 /* Header */
@@ -35,6 +38,23 @@
 .article dd {
   margin-bottom: 7px;
   padding-left: 20px;
+}
+
+.article h3 {
+  border-image: none;
+  border-left: none;
+  padding-left: 0;
+  border-bottom: solid 4px var(--theme-color);
+}
+
+.article h4 {
+  margin-left: -5px;
+}
+.article h4::before {
+  content: "";
+  margin-left: -5px;
+  padding-right: 5px;
+  border-left: solid 4px var(--theme-color);
 }
 
 /* 「監査ログの一覧」で使用する設定 **************************************/
