--- a/layouts/partials/searchbox.html
+++ b/layouts/partials/searchbox.html
@@ -15,6 +15,9 @@
 {{- end }}
 {{- $fullsize := false }}
 {{- $ph := (i18n "Search_example") }}
+{{- if eq $.Site.Params.product "support_guide" }}
+  {{- $ph = (i18n "Enter_keywords") }}
+{{- end }}
 {{- if or .IsHome (eq .Params.type "search_result") }}
   {{- $fullsize = true }}
 {{- else }}
