fixed header logo link

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -31,10 +31,14 @@
         {{- end }}
                 <h1>
         {{- $urlparts := split $.Site.BaseURL "/" }}
-                    <a class="logo-link" href="/{{index $urlparts 3}}/">
+        {{- $base := "/" }}
+        {{- if ne $.Site.Params.product "support_guide" }}
+          {{- $base = printf "/%s/" (index $urlparts 3) }}
+        {{- end }}
+                    <a class="logo-link" href="{{$base}}">
         {{- if or (eq .Site.Params.product "kintone") (eq $.Site.Params.TargetRegion "US") }}
             {{- $alt := printf "%s %s" $.Site.Params.product_name $.Site.Params.help}}
-                        <img class="logo-img" src="/{{index $urlparts 3}}/{{ $.Site.Params.logo }}" alt="{{$alt}}" title="{{$alt}}">
+                        <img class="logo-img" src="{{$base}}{{ $.Site.Params.logo }}" alt="{{$alt}}" title="{{$alt}}">
         {{- else }}
             {{- $title := printf "%s %s" ($.Scratch.Get "sitename") $.Site.Params.help }}
             {{- if eq $.Site.Params.preview_site true }}
