--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -78,6 +78,7 @@
       {{- $templateversion = . }}
     {{- end }}
     <meta name="cy-template-version" content="{{$templateversion}}">
+    <meta name="cy-product-name" content="{{.Site.Params.product}}">
     {{- if and (ne .Site.Params.product "Office") (ne .Site.Params.product "Mailwise") (ne .Site.Params.product "Remote")}}
     {{- partial "alternatelink" . }}
     {{- end }}
