--- a/layouts/redirect_js/section.html
+++ b/layouts/redirect_js/section.html
@@ -5,6 +5,7 @@
 <title>{{$title}} | {{.Site.Params.product_name}} {{.Site.Params.help}}</title>
 <meta name="robots" content="noindex">
 <meta charset="utf-8" />
+<meta name="cy-region" content="{{.Site.Params.TargetRegion}}">
 {{- template "gtm" dict "key" "GTM-5ZR5GF" }}
 {{- $urlParts := split .Page.RelPermalink "/"}}
 <script src="/{{index $urlParts 1}}/{{index $urlParts 2}}/redirect/{{.Params.jsname}}.js"></script>
