modified button tag to anchor tag when there is no menu item

--- a/static/stylesheets/toppage2.css
+++ b/static/stylesheets/toppage2.css
@@ -78,6 +78,10 @@
   text-align: left;
   z-index: 1;
 }
+.top-page-card-anchor {
+  text-decoration: none;
+  color: var(--font-color);
+}
 
 .top-page-card-parent::after {
   content: "";
