--- a/layouts/index.html
+++ b/layouts/index.html
@@ -48,7 +48,7 @@
         {{- else if eq $type "page" }}
           {{- if hasPrefix $value "http" }}
             <!-- link to outer site -->
-              <button class="top-page-card top-page-card-single" href={{$value}}>{{$text}}</button>
+              <a class="top-page-card top-page-card-anchor" href={{$value}}>{{$text}}</a>
           {{- else }}
             {{- range $allpages }}
               {{- if eq (index .Params.aliases 0) $value }}
@@ -69,9 +69,9 @@
                   </ul>
 
                 {{- else }}
-              <button class="top-page-card top-page-card-single" href={{.RelPermalink}}>
+              <a class="top-page-card top-page-card-anchor" href={{.RelPermalink}}>
                 {{- partial "title" . -}}
-              </button>
+              </a>
                 {{- end }}
                 {{- break }}
               {{- end }} <!-- aliase match end -->
