--- a/static/stylesheets/application2.css
+++ b/static/stylesheets/application2.css
@@ -63,3 +63,8 @@ a {
 .footer::before {
   background-image: none;
 }
+
+/* WOVN -------------------------------------- */
+.wv-brk-en {
+  font-weight: bold;
+}
