--- a/layouts/shortcodes/wv_brk.html
+++ b/layouts/shortcodes/wv_brk.html
@@ -1,7 +1,7 @@
-{{- $langCode := $.Site.LanguageCode }}
-{{- $lnagOnly := (substr $langCode 0 2) }}
-{{- if or (eq $lnagOnly "ja")  (eq $lnagOnly "zh") }} 
+{{- $langCode := $.Site.LanguageCode -}}
+{{- $lnagOnly := (substr $langCode 0 2) -}}
+{{- if or (eq $lnagOnly "ja")  (eq $lnagOnly "zh") -}}
 <span class="wv-brk">{{ .Inner | markdownify }}</span>
-{{- else }}
+{{- else -}}
 <span class="wv-brk wv-brk-en">{{ .Inner | markdownify }}</span>
-{{- end }}
+{{- end -}}
