--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,13 +22,85 @@
   {{- $allpages := .Site.AllPages }}
   <main class="main">
     <article class="home-article" >
-    {{- $region := $.Site.Params.TargetRegion | upper }}
-    {{- $lang := $.Site.LanguageCode }}
-    {{- if eq (hasPrefix $lang "zh-tw") true }}
-        {{- $lang = substr $lang 0 5 }}
-    {{- else }}
-        {{- $lang = substr $lang 0 2 }}
+  {{- $region := $.Site.Params.TargetRegion | upper }}
+  {{- $lang := $.Site.LanguageCode }}
+  {{- if eq (hasPrefix $lang "zh-tw") true }}
+    {{- $lang = substr $lang 0 5 }}
+  {{- else }}
+    {{- $lang = substr $lang 0 2 }}
+  {{- end }}
+  {{- $copy_prod := slice "slash" "support_guide" "store"}}
+  {{- $makecopy := false }}
+  {{- if in $copy_prod $.Site.Params.product  }}
+    {{- $makecopy = true }}
+  {{- end }}
+  {{- if eq $.Site.Params.product "support_guide" }}
+  <!-- WOVN対応できるまでの暫定対応 -->
+    {{- $wv_lang := slice "es" "th" }}
+    {{- if in $wv_lang $lang  }}
+      {{- $makecopy = false }}
     {{- end }}
+  {{- end }}
+  {{- if and (eq $.Site.Params.TargetRegion "US") (eq $makecopy true) }}
+    <!-- Make a copy of kintone top page from json file. -->
+    {{- $card_idx := 0 }}
+    {{- $json_data := dict }}
+    <!-- Get a json file from the published kintone help site. -->
+    {{- $json_url := printf "https://%s/k/%s/toppage.json" $.Site.Params.domain $lang }}
+    {{- with resources.GetRemote $json_url }}
+        {{- with . | transform.Unmarshal }}
+          {{- $json_data = . }}
+          {{- $categories := $json_data.categories}}
+          {{- range $categories }}
+                <h2 class="top-page-category"><i class="{{.category_class}} top-page-category-icon"></i>{{.category_title}}</h2>
+                <div class="top-page-card-group">
+            {{- $cards := .cards }}
+            {{- range $idx, $value := $cards }}
+              {{- if eq $value.card_type "list" }}
+                  <button type="button" id="top-page-card-{{$card_idx}}" class="top-page-card top-page-card-parent" aria-controls="top-page-panel-{{$card_idx}}" aria-haspopup="true" aria-expanded="false">{{$value.card_title}}</button>
+                    <ul id="top-page-panel-{{$card_idx}}" class="top-page-panel" aria-labelledby="top-page-card-{{$card_idx}}" tabindex="-1" role="menu">
+                {{- $items := $value.items }}
+                {{- range $item_idx,$item_value := $items }}
+                      <li role="none"><a href={{$item_value.item_href}} role="menuitem" itemnum="{{add $item_idx 1}}" tabindex="-1"><span class="top-page-item">{{$item_value.item_title}}</span></a></li>
+                {{- end }}
+                    </ul>
+              {{- else if eq $value.card_type "partition" }}
+                  <div class="top-page-partition"></div>
+              {{- else }}
+                  <a class="top-page-card top-page-card-anchor" href={{.card_href}}>{{.card_title}}</a>
+              {{- end }}
+              {{- $card_idx = add $card_idx 1 }}
+            {{- end }}
+                </div>
+          {{- end }} <!-- end of categories -->
+
+          {{- $appendixes := $json_data.appendixes}}
+          {{- if gt ($appendixes | len) 0 }}
+            <div class="appendix-info">
+            {{- range $appendixes }}
+                <div class="appendix-category-group">
+                  <h3 class="appendix-category">
+                    <span class="appendix-category-icon-frame "><i class="{{.category_class}} appendix-category-icon"></i></span>
+                    <span class="appendix-category-title">{{.category_title}}</span>
+                  </h3>
+              {{- $items := .items }}
+              {{- range $items }}
+                  <div class="appendix-link-item"><a href="{{.item_url}}">{{.item_title}}</a>
+                  {{- if eq .item_jaonly true }}
+                      <span class="status-info">{{ i18n "Only_ja" }}</span>
+                  {{- end }}
+                  </div>
+              {{- end }}
+                </div>
+            {{- end }} <!-- end of appendix  range -->
+            </div>
+          {{- end }} <!-- end of appendixes -->
+        {{- end }}
+    {{- else }}
+      {{ errorf "Unable to get remote resource %q" $json_url }}
+    {{- end }} <!--  end of GetRemote -->
+  {{- else }}
+    <!-- in the case of kintone -->
     {{- $path := (printf "%s/csv/home_%s.csv" $lang $region) }}
     {{- with resources.Get $path }}
       {{- $data := . | transform.Unmarshal (dict "delimiter" ",") }}
@@ -58,7 +130,6 @@
                 {{- end}}
                 {{- if gt ($pages | len) 0 }}
                 <button type="button" id="top-page-card-{{$i}}" class="top-page-card top-page-card-parent" aria-controls="top-page-panel-{{$i}}" aria-haspopup="true" aria-expanded="false">{{- partial "title" . -}}</button>
- 
                   <ul id="top-page-panel-{{$i}}" class="top-page-panel" aria-labelledby="top-page-card-{{$i}}" tabindex="-1" role="menu">
                     <li role="none"><a href={{.RelPermalink}} role="menuitem" itemnum="0" tabindex="-1"><span class="top-page-item">{{- partial "title" . -}}</span></a></li>
                   {{- range $idx, $page := $pages }}
@@ -82,14 +153,13 @@
         {{- end }} <!-- csv row type end -->
 
       {{- end }} <!-- end of csv row iteration -->
-        {{- if eq $category_opened true }}
-          </div>
-          {{- $category_opened = false }}
-        {{- end }}
+      {{- if eq $category_opened true }}
+        </div>
+        {{- $category_opened = false }}
+      {{- end }}
     {{- else }}
-      <!-- {{ errorf "Unable to get resource %q" $path }} -->
+      {{ errorf "Unable to get resource %q" $path }}
     {{- end }}
-
 
     {{- $path_apx := (printf "%s/csv/home_apx_%s.csv" $lang $region) }}
     {{- with resources.Get $path_apx }}
@@ -126,13 +196,16 @@
             </div>
       {{- end }}
           </div> <!-- end of appendix -->
+    {{- else }}
+      <!-- Appendix is ​​optional so no error is displayed. -->
     {{- end }}
-
+  {{- end }} <!-- end of branching by product -->
 
         </article>
     </main>
   </div>
-{{- else }} <!-- version"1" -->
+{{- else }}
+  <!-- for version 1 -->
   {{- if ne $.Site.Params.preview_site true }}
     <div class="eye-catching">
         <div class="hero" style="background-image: url('{{ "images/hero_common.png" | relURL}}');"></div>
