--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -55,7 +55,7 @@
     <title>{{ $title }}</title>
     <link rel="canonical" href="https://{{.Site.Params.domain}}{{ .Permalink | relURL }}">
     {{- if or (eq .Params.type "search_result") (eq .Params.nolink true) (eq .Site.Params.staging "true") }}
-    <meta name="robots" content="noindex">
+    <meta name="robots" content="noindex,nofollow">
     {{- end }}
     <meta name="description" content="{{$desc}}">
     <meta name="thumbnail" content="https://{{.Site.Params.domain}}{{ .Site.Params.og_img | relURL }}">
