enabled noindex meta tag

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -51,9 +51,9 @@
     {{- end }}
     <title>{{ $title }}</title>
     <link rel="canonical" href="https://{{.Site.Params.domain}}{{ .Permalink | relURL }}">
-    {{- if or (eq .Params.type "search_result") (eq .Params.nolink true) }}
-    <meta name="robots" content="noindex">
-    {{- end }}
+
+    <meta name="robots" content="noindex,nofollow">
+
     <meta name="description" content="{{$desc}}">
     <meta name="thumbnail" content="https://{{.Site.Params.domain}}{{ .Site.Params.og_img | relURL }}">
     <meta property="og:url" content="https://{{.Site.Params.domain}}{{.Permalink | relURL }}">
