--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -771,35 +771,7 @@ h6 + .id-link-button {
 }
 /* -------------------- end of Header label */
 
-.codeblock-wrapper {
-    position: relative;
-}
 
-.codeblock-copy-button {
-    display: block;
-    position: absolute;
-    right: 4px;
-    top: 4px;
-    padding: 4px 8px;
-    border-radius: 4px;
-    cursor: pointer;
-    background-color: #fff;
-}
-
-.codeblock-copy-button:hover {
-    background-color: #ECEAF7;
-}
-
-.codeblock-copy-message {
-    display: none;
-    position: absolute;
-    right: 0;
-    top: 48px;
-    padding: .5em;
-    color: #fff;
-    background-color: rgba(29,30,29,0.8);
-    z-index: 999;
-}
 
 /* tree navigation -------------------- */
 .tree-wrap {
@@ -1233,6 +1205,48 @@ h6 + .id-link-button {
     content: none;
 }
 /* -------------------- end of Article */
+
+/* codeblock -------------------- */
+.codeblock-wrapper {
+    position: relative;
+}
+
+.codeblock-copy-button {
+    display: block;
+    position: absolute;
+    right: 4px;
+    top: 4px;
+    padding: 4px 8px;
+    border-radius: 4px;
+    cursor: pointer;
+    background-color: #fff;
+}
+
+.codeblock-copy-button:hover {
+    background-color: #ECEAF7;
+}
+
+.codeblock-copy-message {
+    display: none;
+    position: absolute;
+    right: 0;
+    top: 48px;
+    padding: .5em;
+    color: #fff;
+    background-color: rgba(29,30,29,0.8);
+    z-index: 999;
+}
+
+.article .codeblock-csv {
+    color: #f8f8f2;
+    background: #272822;
+}
+
+.article .codeblock-plaintext {
+    color: #d8dee9;
+    background: #2e3440;
+}
+/* -------------------- end of codeblock */
 
 
 /* Table size -------------------- */
