--- a/layouts/partials/support_inquiry.html
+++ b/layouts/partials/support_inquiry.html
@@ -4,4 +4,7 @@
         <i class="fas fa-headset inquiry-icon"></i>
         {{ i18n "Contact_support"}}</button>
     </div>
+    <!-- Start of HubSpot Embed Code -->
+    <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/1857320.js"></script>
+    <!-- End of HubSpot Embed Code -->
 </aside>
