add a provisional measure for wv-brk

--- a/layouts/shortcodes/wv_brk.html
+++ b/layouts/shortcodes/wv_brk.html
@@ -1,1 +1,7 @@
+{{- $langCode := $.Site.LanguageCode -}}
+{{- $lnagOnly := (substr $langCode 0 2) -}}
+{{- if eq $lnagOnly "en" -}}
+<span class="wv-brk wv-brk-en">{{ .Inner | markdownify }}</span>
+{{- else -}}
 <span class="wv-brk">{{ .Inner | markdownify }}</span>
+{{- end -}}
