--- a/layouts/index.html
+++ b/layouts/index.html
@@ -131,11 +131,8 @@
                 {{- if gt ($pages | len) 0 }}
                 <button type="button" id="top-page-card-{{$i}}" class="top-page-card top-page-card-parent" aria-controls="top-page-panel-{{$i}}" aria-haspopup="true" aria-expanded="false">{{- partial "title" . -}}</button>
                   <ul id="top-page-panel-{{$i}}" class="top-page-panel" aria-labelledby="top-page-card-{{$i}}" tabindex="-1" role="menu">
-                    <li role="none"><a href={{.RelPermalink}} role="menuitem" itemnum="0" tabindex="-1"><span class="top-page-item">{{- partial "title" . -}}</span></a></li>
-                  {{- range $idx, $page := $pages }}
-                    {{- if ne .Type "redirect_js" }}
-                    <li role="none"><a href={{.RelPermalink}} role="menuitem" itemnum="{{add $idx 1}}" tabindex="-1"><span class="top-page-item">{{- partial "title" $page -}}</span></a></li>
-                    {{- end }}
+                  {{- range $idx, $page := slice . | append $pages }}
+                    <li role="none"><a href={{.RelPermalink}} role="menuitem" itemnum="{{$idx}}" tabindex="-1"><span class="top-page-item">{{- partial "title" $page -}}</span></a></li>
                   {{- end }}
                   </ul>
 
