TcTodo-448: トップページのドロップダウンリストの `li` 要素の `itemnum` を連番にする

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -131,10 +131,17 @@
                 {{- if gt ($pages | len) 0 }}
                 <button type="button" id="top-page-card-{{$i}}" class="top-page-card top-page-card-parent" aria-controls="top-page-panel-{{$i}}" aria-haspopup="true" aria-expanded="false">{{- partial "title" . -}}</button>
                   <ul id="top-page-panel-{{$i}}" class="top-page-panel" aria-labelledby="top-page-card-{{$i}}" tabindex="-1" role="menu">
-                  {{- range $idx, $page := slice . | append $pages }}
+
+                  {{/* `itemnum` の値を連番にするため、予め条件に該当するページのスライスを作り直している */}}
+                  {{- $displayed_pages := slice}}
+                  {{- range $page := slice . | append $pages }}
                     {{- if or (eq .Params.disabled nil) (not (in .Params.disabled .Site.Params.TargetRegion)) }}
-                    <li role="none"><a href={{.RelPermalink}} role="menuitem" itemnum="{{$idx}}" tabindex="-1"><span class="top-page-item">{{- partial "title" $page -}}</span></a></li>
+                      {{- $displayed_pages = $displayed_pages | append $page }}
                     {{- end }}
+                  {{- end }}
+
+                  {{- range $idx, $page := $displayed_pages }}
+                      <li role="none"><a href={{.RelPermalink}} role="menuitem" itemnum="{{$idx}}" tabindex="-1"><span class="top-page-item">{{- partial "title" $page -}}</span></a></li>
                   {{- end }}
                   </ul>
 
