move geolocation.js to footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -79,6 +79,7 @@
         <!-- CookiePro Cookies Settings button start -->
         <button id="ot-sdk-btn" class="ot-sdk-show-settings"> Cookie Settings</button>
         <!-- CookiePro Cookies Settings button end -->
+        <script type="text/javascript" src="{{ printf "%s" "javascripts/geolocation.js" | relURL }}"></script>
         {{- end }}
         </div>
     </div>
