reapplied CookiePro disabled condition

--- a/layouts/partials/footer2.html
+++ b/layouts/partials/footer2.html
@@ -82,7 +82,7 @@
         <div class="footer-legal-copyright">
             {{ i18n "Footer_copyright" }}
         </div>
-        {{- if eq .Site.Params.TargetRegion "US"}}
+        {{- if and (eq .Site.Params.TargetRegion "US") (eq hugo.Environment "production") }}
         <!-- CookiePro Cookies Settings button start -->
         <button id="ot-sdk-btn" class="ot-sdk-show-settings"> Cookie Settings</button>
         <!-- CookiePro Cookies Settings button end -->
