add class to support button

--- a/layouts/partials/support_inquiry.html
+++ b/layouts/partials/support_inquiry.html
@@ -1,6 +1,6 @@
 <aside id="support-inquiry">
     <div class="inquiry-panel">
-      <button class="inquiry-btn" id="inquiry-btn" onclick="location.href='{{.}}'">
+      <button class="inquiry-btn hs-cta-trigger-button hs-cta-trigger-button-187693642597" id="inquiry-btn">
         <i class="fas fa-headset inquiry-icon"></i>
         {{ i18n "Contact_support"}}</button>
     </div>
