Remove a parameter when calling partial template

--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -88,7 +88,7 @@
 {{- partial "treenav_toggle" . }}
 {{- partial "gototop" . }}
 {{- if and $.Site.Params.support_inquiry (eq $.Site.LanguageCode "en-us") }}
-    {{- partial "support_inquiry" $.Site.Params.support_inquiry }}
+    {{- partial "support_inquiry" }}
 {{- end }}
 {{- partial "enquete" . -}}
 {{- partial "footer" . }}
