--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -31,7 +31,7 @@
             {{ partial "disclaimer" . }}
         {{- end }}
         {{- if eq $.Site.Params.use_wovn true }}
-            {{ partial "disclaimer2" . }}
+            <div id="mt-disclaimer-top" class="mt-disclaimer">{{ i18n "MT_Disclaimer2" }}</div>
         {{- end }}
         {{- partial "latestpageguide" . }}
         <main id="main" role="main"> 
@@ -75,6 +75,9 @@
                 {{- end }}
             {{- end }}
         </main>
+        {{- if eq $.Site.Params.use_wovn true }}
+            <div id="mt-disclaimer-top" class="mt-disclaimer mt-disclaimer-bottom">{{ i18n "MT_Disclaimer3" }}</div>
+        {{- end }}
     </div>
 
     {{- if ne $.Site.Params.toc_in_tree true -}}
