--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -68,6 +68,9 @@
             {{- end }}
         </div>
         <div id="footercopyright">
+	　　{{- if eq $.Site.Params.use_wovn true }}
+            <div id="mt-disclaimer-footer" class="mt-disclaimer mt-disclaimer-bottom">{{ i18n "MT_Disclaimer4" }}</div><br>
+        {{- end }}
         {{ i18n "Footer_copyright" }}<br>
         {{- if eq .Site.Params.TargetRegion "US" }}
         <!-- CookiePro Cookies Settings button start -->
