--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -77,7 +77,7 @@
     {{- with .Site.Params.template_version }}
       {{- $templateversion = . }}
     {{- end }}
-    <meta name="cy-template-version" content="{{$templateversion}}">
+    <meta name="cy-template-version" content="2">
     <meta name="cy-product-name" content="{{.Site.Params.product}}">
     <meta name="cy-region" content="{{.Site.Params.TargetRegion}}">
     {{- if and (ne .Site.Params.product "Office") (ne .Site.Params.product "Mailwise") (ne .Site.Params.product "Remote")}}
