--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -5,7 +5,10 @@
         {{- $baseUrl := split .Site.BaseURL "/" }}
         {{- $num := sub (len $baseUrl) 2 }}
         {{- $prefix := index $baseUrl $num }}
-    <script src="https://j.wovn.io/1" data-wovnio="key={{.Site.Params.data_wovnio}}&amp;defaultLang=en&amp;currentLang=en&amp;urlPattern=path&amp;backend=true&amp;langCodeAliases={&quot;en&quot;:&quot;en&quot;}&amp;sitePrefixPath={{$prefix}}&amp;langParamName=wovn&amp;backendVersion=WOVN.proxy_0.9.0" async></script>
+    <script src="https://j.wovn.io/1" data-wovnio="key={{.Site.Params.data_wovnio}}&amp;defaultLang=ja&amp;currentLang=ja&amp;urlPattern=path&amp;
+backend=true&amp;langCodeAliases={&quot;ja&quot;:&quot;ja&quot;,&quot;zh-CHS&quot;:&quot;zh&quot;,&quot;zh-CHT&quot;:
+&quot;zh-tw&quot;}&amp;sitePrefixPath={{$prefix}}&amp;langParamName=wovn&amp;backendVersion=WOVN.proxy_0.24.5" async=""
+></script>
     {{- end }}
 
     <meta charset="utf-8">
