modified cn domain

--- a/layouts/partials/alternatelink.html
+++ b/layouts/partials/alternatelink.html
@@ -34,7 +34,7 @@
         {{- if eq $curregion "us" }}
             {{- $domain = "get.kintone.help" }}
         {{- else if eq $curregion "cn" }}
-            {{- $domain = "help.cybozu.cn" }}
+            {{- $domain = "cn.cybozu.help" }}
         {{- end -}}
 
         {{- range $.AllTranslations }}
