--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -15,6 +15,15 @@
 {{- with $.Site.Params.template_version }}
   {{- $templateversion = $.Site.Params.template_version }}
 {{- end }}
+    {{- $base := "/" }}
+    {{- $urlparts := split $.Site.BaseURL "/" }}
+    {{- if ne $.Site.Params.product "support_guide" }}
+      {{- $product_pos := sub ($urlparts | len ) 2 }}
+      {{- $base = printf "/%s/" (index $urlparts $product_pos) }}
+    {{- end }}
+    <div id="page-spinner">
+      <img class="spinner-icon" src="{{$base}}images/spinner.svg">
+    </div>
     <div id="shield"></div>
     <header id="header" class="header {{$hedclass}}">
         <div id="head" class="header-wrap">
@@ -30,12 +39,6 @@
                 </button>
         {{- end }}
                 <h1>
-        {{- $urlparts := split $.Site.BaseURL "/" }}
-        {{- $base := "/" }}
-        {{- if ne $.Site.Params.product "support_guide" }}
-          {{- $product_pos := sub ($urlparts | len ) 2 }}
-          {{- $base = printf "/%s/" (index $urlparts $product_pos) }}
-        {{- end }}
         {{- $baseLink := printf "%s%s/" $base $.Lang }}
                     <a class="logo-link" href="{{$baseLink}}">
         {{- if or (eq .Site.Params.product "kintone") (eq $.Site.Params.TargetRegion "US") }}
