--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -2246,6 +2246,18 @@ i.index-pdf {
 }
 /* ----- Temporary Measures end */
 
+#page-spinner {
+  display: none;
+}
+.spinner-icon {
+  width: 150px;
+  height: 150px;
+  position: fixed;
+  top: 150px;
+  left: calc(50% - 150px);
+  z-index: 9999;
+}
+
 /* 370px以上の設定 *****************************************************/
 @media only screen and (min-width:370px){
     .lang-wrap {
